--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,31 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+	easyb
+}
+
 dependencies {
     groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.6.0'
     testCompile group: 'junit', name: 'junit', version: '4.4'
-    testRuntime group: 'org.easyb', name: 'easyb', version: '0.9.6'
+    easyb group: 'org.easyb', name: 'easyb', version: '0.9.6'
+    easyb group: 'commons-cli', name: 'commons-cli', version: '1.1'
 }
 
+task easyb << {
+	ant.taskdef(name: 'easyb', classname: 'org.easyb.ant.BehaviorRunnerTask', classpath: configurations.easyb.asPath)
+    ant.easyb() {
+      classpath {
+		 pathelement(path: configurations.easyb.asPath)
+		 pathelement(path: configurations.testRuntime.asPath)
+      }
+      report(location: 'build/reports/story.txt', format: 'txtstory')
+      behaviors(dir: 'src/test/groovy') {
+        include(name: '**/*Story.groovy')
+      }
+    }
+}
 
+test.dependsOn easyb
 
 
