--- a/.project
+++ b/.project
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <projectDescription>
-  <name>groovy-scratchpad</name>
-  <comment/>
-  <projects/>
-  <natures>
-    <nature>org.eclipse.jdt.core.javanature</nature>
-  </natures>
-  <buildSpec>
-    <buildCommand>
-      <name>org.eclipse.jdt.core.javabuilder</name>
-      <arguments/>
-    </buildCommand>
-  </buildSpec>
+	<name>groovy-scratchpad</name>
+	<comment></comment>
+	<projects>
+	</projects>
+	<buildSpec>
+		<buildCommand>
+			<name>org.codehaus.groovy.eclipse.groovyBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+	</buildSpec>
+	<natures>
+		<nature>org.codehaus.groovy.eclipse.groovyNature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+	</natures>
 </projectDescription>
