--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     )
     testRuntime (
             [group: 'net.sourceforge.cobertura', name: 'cobertura', version: '1.9'],
+            [group: 'cglib', name: 'cglib-nodep', version: '2.1.3'],
+            [group: 'org.objenesis', name: 'objenesis', version: '1.1'],
             [group: 'org.easyb', name: 'easyb', version: '0.9.5.2']
     )
     groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.6.5'
