--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 usePlugin 'groovy'
 usePlugin 'eclipse'
-usePlugin 'java' 
 usePlugin 'project-reports' 
 usePlugin 'code-quality'
 
@@ -9,6 +8,16 @@ coberturaInstrumentedClassesDir = "${buildDir}/classes/main"
 coberturaDataFile ='./cobertura.ser'
 cpdReport = 'build/cpdReport.xml'
 sourceSets.test.groovy.srcDir file('src/test/stories')
+
+// Per-user properties (overrides anything defined above)
+Properties props = new Properties()
+user = System.properties['user.name']
+try {
+    file("${user}.properties").withInputStream  { props.load(it) }
+    props.each { String name, value -> project.setProperty(name, value) } 
+} catch (FileNotFoundException e) {
+    logger.info "User-properties file ${user}.properties not found - override specific properties here"
+}
 
 repositories {
     mavenRepo urls: "https://collaborate.bt.com/artefacts/content/groups/public" 
@@ -28,13 +37,17 @@ dependencies {
     )
     testRuntime (
             [group: 'net.sourceforge.cobertura', name: 'cobertura', version: '1.9'],
-            [group: 'cglib', name: 'cglib-nodep', version: '2.1.3'],
+            [group: 'cglib', name: 'cglib-nodep', version: '2.1_3'],
             [group: 'org.objenesis', name: 'objenesis', version: '1.1'],
             [group: 'org.easyb', name: 'easyb', version: '0.9.5.2']
     )
     groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.6.5'
     groovy group: 'commons-cli', name: 'commons-cli', version: '1.1'
     cpdConf group: 'pmd', name: 'pmd', version: '4.2.5'
+}
+
+task echoProps << {
+   ant.echo cpdReport
 }
 
 task ide << { 
@@ -94,7 +107,6 @@ task coberturaInstrument(dependsOn: [compileTestGroovy, backupMainClasses]) << {
         }
     }
 }
-test.dependsOn coberturaInstrument
 
 task coberturaReport(dependsOn: test) << {
     ant {
